| Summary: | ASTERISK-24895: After hangup on the side of the ISDN network no HangupRequest event comes for the dahdi channel. | ||
| Reporter: | Andrew Zherdin (azher) | Labels: | |
| Date Opened: | 2015-03-19 11:39:49 | Date Closed: | 2015-04-21 09:57:53 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_dahdi |
| Versions: | 11.6.1 11.16.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | CPU: Intel(R) Xeon(R) CPU E5606 @ 2.13GHz; RAM: 32GB Linux: 3.2.0-4-amd64 #1 SMP Debian 3.2.60-1+deb7u3 x86_64 GNU/Linux Dahdi HW: Digium, Inc. Wildcard TE220 dual-span T1/E1/J1 card 3.3V (PCI-Express) (5th gen) (rev 02) Asterisk: 11.16 Libpri: 1.4.15 Dahdi: 2.10.0.1 | Attachments: | ( 0) issue_24895_full_log.txt |
| Description: | When I call my system via ISDN network and then hang up, no HangupRequest event comes for the dahdi channel.
For the channel occurs only SoftHangupRequest event, not as I expect HangupRequest event. When I call via SIP comes HangupRequest event as expected on the channel that has hung up. My Log: {noformat} [Mar 19 17:29:53] VERBOSE[28690][C-00000000] sig_pri.c: -- Accepting call from '49xxxxxxx' to 'yyyyyyyy' on channel 0/1, span 1 ... [Mar 19 17:29:57] VERBOSE[28690][C-00000000] sig_pri.c: -- Span 1: Channel 0/1 got hangup request, cause 16 ... [Mar 19 17:29:57] DEBUG[28696] manager.c: Examining event: Event: SoftHangupRequest Privilege: call,all Channel: DAHDI/i1/49xxxxxxx-1 Uniqueid: 1426782593.0 Cause: 16 {noformat} My dialplan for the test: {noformat} exten => 400,1,Answer() exten => 400,n,Playback(hello-world) exten => 400,n,Playback(hello-world) exten => 400,n,Playback(hello-world) exten => 400,n,Playback(hello-world) exten => 400,n,Playback(hello-world) exten => 400,n,hangup() {noformat} | ||
| Comments: | By: Matt Jordan (mjordan) 2015-03-19 14:45:46.964-0500 We require additional debug to continue with triage of your issue. Please follow the instructions on the wiki [1] for how to collect debugging information from Asterisk. For expediency, where possible, attach the debug with a '.txt' file extension so that the debug will be usable for further analysis. Thanks! [1] https://wiki.asterisk.org/wiki/display/AST/Collecting+Debug+Information By: Andrew Zherdin (azher) 2015-03-20 05:26:11.124-0500 Hello Mr. Jordan, Thanks for the very quick response. Here is the requested log file. Thank you very much and best regards, Andrew Zherdin By: Andrew Zherdin (azher) 2015-04-01 07:36:24.672-0500 Hello, thank you very much for support. What is now the state of the ticket? Would it be possible for me to view the internal ticket SWP-7886? Can I see the state of the ticket? Best regards, Andrew Zherdin By: Joshua C. Colp (jcolp) 2015-04-01 07:40:42.900-0500 This issue is in the queue to be worked on, but is not currently being worked on. The SWP-7886 issue is an internal issue which has no additional information that is relevant. By: Andrew Zherdin (azher) 2015-04-01 08:06:28.572-0500 Thank you very much for the response. By: Richard Mudgett (rmudgett) 2015-04-20 19:21:29.128-0500 Patches up on Gerrit for review: https://gerrit.asterisk.org/#/c/173/ https://gerrit.asterisk.org/#/c/172/ https://gerrit.asterisk.org/#/c/171/ | ||